<resources>
    <string name="_appname">Educated Guess</string>
    <string name="_educated_guess">Educated Guess</string>
    <string name="_splashscreen_graphic">splashscreen graphic</string>
    <string name="_info">Please select an number of digits. The number of digits I keep in my mind and the number of digits you choose will be the same. Also, never forget that you have 10 rights</string>
    <string name="_twodigits">Two digits number</string>
    <string name="_threedigits">Three digits number</string>
    <string name="_fourdigits">Four digits number</string>
    <string name="_start">Start</string>
    <string name="_mainsub">Choose your difficulty...</string>
</resources>